# Document-Organizer

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  TODO.md  app.config.json  build.bat  build.sh  clean.bat  clean.sh  dev.bat  dev.sh  pom.xml  setup-cert.ps1  setup.bat  setup.sh
backend/: file_metadata.db  pom.xml
backend/organized/plain/2026/05/: test_upload.txt
backend/src/main/java/com/updevlogics/: Application.java  EPatraApplication.java
backend/src/main/java/in/updev/: DocumentOrganizerApplication.java
backend/src/main/java/org/sanchaya/: SanchayaApplication.java
backend/src/main/resources/: application.yml
builder/: build.bat  build.js  build.sh  clean.bat  clean.js  clean.sh  increment_version.py  setup-cert.ps1  simplify_ui.py
certs/: developer.pfx
doc/: Architecture_Design.md  Contract_Agreement.md  Cost_Estimation_on_AWS_Hosting.md  Design_Document.md  Design_System.md  Project_Closure_Document.md  Project_Plan.md  Project_Proposal.md  Requirements_Document.md  Statement_of_Work_(SOW).md
docs/: ARCHITECTURE.md  FEATURES_STATUS.md  USER_GUIDE.md  architecture-overview.md  changelog.md  database-schema.md  development-phases.md  scalability-deployment.md
docs/help/: ingest.md
frontend/: bump-version.cjs  index.html  package-lock.json  package.json  tailwind.config.js  test-upload.txt  vite.config.js
frontend/public/help/: backup.md  categories.md  explorer.md  ingest.md  introduction.md
frontend/src/: App.jsx  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
schema/: data.sql  schema.sql
(+73 files in other folders)
