[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Updev Logics"]
edition = "2021"
rust-version = "1.59"

[build-dependencies]
tauri-build = { version = "1.5" }

[dependencies]
tauri = { version = "1.5", features = [ "shell-open" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
