[package]
name = "app"
version = "1.0.21"
description = "A Tauri App"
authors = ["Notepad Developers"]
edition = "2021"
rust-version = "1.59"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = false
opt-level = "s"

[profile.release.build-override]
codegen-units = 16
opt-level = 0

[profile.release.package."*"]
codegen-units = 16
opt-level = 0
